# Gong

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  bandit-report.json  docker-compose.yml  pyproject.toml  spec.md
.github/workflows/: ci.yml  release.yml
docs/: hierarchical_templates.md
examples/: ecommerce-simulation.yaml  hierarchical_templates_example.py
examples/yaml-driven/: README.md  ecommerce-demo.yaml  simple-demo.yaml
scripts/: cleanup_debug.py  fix_chaos_engine.py  health-check.py  start-dev.py  test_ci.py
src/: main.py
src/gong/: __init__.py  cli.py  config.py
src/gong/actions/: executor.py
src/gong/api/: __init__.py  dependencies.py  main.py
src/gong/chaos/: __init__.py  engine.py
src/gong/cli/: __init__.py  __main__.py  config_generator.py  main.py
src/gong/core/: __init__.py  interfaces.py  models.py  protocols.py
src/gong/generator/: __init__.py  service_generator.py
src/gong/llm/: __init__.py  architect.py
src/gong/orchestrator/: __init__.py  dummy_orchestrator.py  k8s_generator.py  k8s_orchestrator.py  scenario_manager.py
src/gong/templates/: README.md  __init__.py  base.py  loader.py  registry.py
src/gong/templates/files/: registry.yaml
src/gong/templates/files/k8s/: namespace.yaml.j2  postgres.yaml.j2  redis.yaml.j2  service-deployment.yaml.j2
src/gong/templates/files/scripts/: cleanup.sh.j2  deploy.sh.j2  test.sh.j2
src/gong/templates/files/service/: Dockerfile.j2  config.py.j2  database.py.j2  functions.py.j2  main.py.j2  requirements.txt.j2
src/gong/templates/files/snippets/: custom_function_call.py.j2  fault_injection.py.j2  http_api_call.py.j2  jwt_validation.py.j2  parallel_execution.py.j2  postgres_query.py.j2  postgres_write.py.j2  return_response.py.j2
src/gong/templates/hierarchical/: __init__.py  manager.py  metadata.py  models.py  optimizer.py
src/gong/traffic/: __init__.py  generator.py
src/gong/utils/: __init__.py  repository.py
src/gong/verification/: engine.py
tests/: conftest.py  test_chaos_engine.py  test_hierarchical_templates.py  test_integration.py  test_models.py  test_scenario_manager.py  test_templates.py  test_traffic_generator.py
tests/integration/: test_api.py  test_demo.py
tests/unit/: test_generator.py  test_models.py  test_templates.py
